--- a/assets/scss/__media.scss
+++ b/assets/scss/__media.scss
@@ -43,11 +43,16 @@
     line-height: 38px;
   }
   .header {
-    font-size: 14px;
-    line-height: 18px;
+    font-size: 12px;
+    line-height: 16px;
     .logo {
       img {
         width: 160px;
+      }
+    }
+    &-nav {
+      li {
+        margin-right: 15px;
       }
     }
   }
@@ -153,8 +158,6 @@
 
 @media (max-width: 992px) {
   .header {
-    font-size: 14px;
-    line-height: 18px;
     .logo {
       img {
         width: 99px;
@@ -162,7 +165,7 @@
     }
     &-nav {
       li {
-        margin-right: 25px;
+        margin-right: 15px;
       }
     }
     &-social {
